reformat code
Signed-off-by: To_Craft <development@tocraft.dev>